--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .list-group{
-            max-height: 800px;
-            margin-bottom: 10px;
-            overflow:scroll;
-            -webkit-overflow-scrolling: touch;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
@@ -26,6 +19,9 @@
         </svg>
         Budger
     </div>
-    <button type="button" class="btn btn-primary" hx-get="/fetch-data" hx-swap="outerHTML" style="margin: 16px">Connect to your inbox</button>
+    <button type="button" class="btn btn-primary" hx-get="/fetch-data" hx-swap="outerHTML" hx-indicator="#spinner" style="margin: 16px">
+        <span class="spinner" id="spinner">Loading...</span>
+        <span class="button-text">Connect to your inbox</span>
+    </button>
 </body>
 </html>
