--- a/app/historical_data_list.html
+++ b/app/historical_data_list.html
@@ -14,5 +14,5 @@
     {% endfor %}
 </div>
 <div class="text-center" style="margin: 16px">
-    <button type="button" class="btn btn-outline-success btn-lg">Train</button>
+    <button type="button" class="btn btn-outline-success btn-lg" hx-get="/popup-form" hx-target="body" hx-swap="beforeend">Train</button>
 </div>
