Process new requests

--- a/app/new_requests.html
+++ b/app/new_requests.html
@@ -14,5 +14,7 @@
             </a>
         {% endfor %}
     </div>
-    <div id="request-budget" class="box">Rui mariquinhas</div>
+    <div class="box">
+        <div id="request-budget" class="border bg-light rounded" style="padding: 10px">Rui mariquinhas</div>
+    </div>
 </div>
