--- a/app/predictions_and_neighbours.html
+++ b/app/predictions_and_neighbours.html
@@ -1,4 +1,4 @@
-<div class="border bg-light rounded" style="padding: 10px">{{ response_text.replace('\n', '<br>')|safe }}</div>
+<textarea class="border bg-light rounded" style="padding: 10px; width: 100%; height: 250px">{{ response_text }}</textarea>
 
 <div class="list-group mt-3">
     <h3>Most similar past budgets</h3>
