--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Budger</title>
+    <link rel="icon" href="{{ url_for('static', path='/svg/badger.svg') }}" type="image/svg+xml">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
